[package]
name = "tembo-telemetry"
version = "0.2.0"
description = "Logging and Telemetry exporters for Tembo.io applications"
homepage = "https://github.com/tembo-io/tembo-telemetry"
repository = "https://github.com/tembo-io/tembo-telemetry"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
actix-web = "4.3"
async-trait = "0.1"
tracing = "0.1"
opentelemetry = { version = "0.19", features = ["rt-tokio-current-thread", "metrics"] }
opentelemetry-otlp = { version = "0.12", features = ["tonic", "trace", "metrics", "tls", "tls-roots"] }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tonic = { version = "0.8", features = ["tls"]}
tracing-opentelemetry = { version = "0.19" }
tracing-actix-web = { version="0.7", features = ["opentelemetry_0_19"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
