[package]
name = "tembo-telemetry"
version = "0.4.0"
description = "Logging and Telemetry exporters for Tembo.io applications"
homepage = "https://github.com/tembo-io/tembo-telemetry"
repository = "https://github.com/tembo-io/tembo-telemetry"
readme = "README.md"
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.72"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
actix-web = "4.6"
async-trait = "0.1"
tracing = "0.1"
opentelemetry = { version = "0.23", default-features = false, features = [
    "trace",
    "metrics",
] }
opentelemetry-otlp = { version = "0.16", features = [
    "tonic",
    "trace",
    "tls",
    "tls-roots",
] }
opentelemetry_sdk = { version = "0.23", features = [
    "metrics",
    "rt-tokio-current-thread",
] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "env-filter",
    "fmt",
    "json",
] }
tracing-opentelemetry = { version = "0.24" }
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_23"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
